# amvo

./: .gitignore  pyproject.toml  readme.md
data/caltech101_subset/: caltech101_subset.files
data/toy-dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
data/toy-dataset/test/labels/: WIN_20220727_12_54_19_Pro_jpg.rf.5177218649ebe81db74e422b57f84bc8.txt  WIN_20220727_12_55_15_Pro_jpg.rf.2e7f2f12777db729b5bca447ffc5a9b2.txt  WIN_20220727_12_55_22_Pro_jpg.rf.f2c2b9835a5d36b5c52985d20da7353e.txt  WIN_20220727_12_55_34_Pro_jpg.rf.88921fc57e3073c0bffb977a5a6b4bbf.txt  WIN_20220727_12_56_46_Pro_jpg.rf.994eef8baeb32cf28b19d73165171f91.txt  WIN_20220727_12_57_18_Pro_jpg.rf.c3cdf8d23bfdd2ce01b3e64445ed6621.txt  WIN_20220727_12_57_20_Pro_jpg.rf.3b5fffc61170f9c47da07f81d5018168.txt  WIN_20220727_12_58_03_Pro_jpg.rf.848d6f315fd88f023833c783909b133e.txt  WIN_20220727_12_58_34_Pro_jpg.rf.0150ca4b6a1af19e6c6173d1c80a825d.txt  WIN_20220727_12_59_24_Pro_jpg.rf.9e892206dda4765e3e2b3ff66ef46ce6.txt  WIN_20220727_13_00_14_Pro_jpg.rf.99e36f1c0da62533c6ab366a22db23b1.txt  (+296 more)
notebook/: 1. CNNObjectClassification-etud.ipynb  2. CNNObjectLocalizationFeelingLucky-etud.ipynb  Descripteurs_globaux.ipynb  Descripteurs_local.ipynb  TP1 - Descripteurs globaux.ipynb  TP2 - Descripteurs locaux.ipynb  TP3 - 1. CNNObjectClassification-etud.ipynb  TP3 - 2. CNNObjectLocalizationFeelingLucky-etud.ipynb  TP3 - 3. CNNObjectLocalizationBBoxRegression-etud.ipynb  TP4 - Flux optiques - visualisation et classification.ipynb  TP5.ipynb
src/: descriptors.py  main.py  stip.py  vlad.py
(+2694 files in other folders)
